# StudentApp

./: .gitignore  Activity_Student_Submit.drawio  Lockdown_Violation_Sync_Sequence.drawio  README.md  StudentApp_Architecture.drawio  Student_Submit_Offline_Sequence.drawio  TeacherApp_Architecture.drawio  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/schemas/com.examhub.student.data.local.StudentAppDatabase/: 1.json  2.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  distortion_analyzer.cpp  layout_calculator.cpp  marker_detector.cpp  native-lib.cpp  native_bridge.cpp  omr_processor.cpp  tps_warper.cpp
app/src/main/cpp/include/: distortion_analyzer.h  layout_calculator.h  marker_detector.h  omr_constants.h  omr_processor.h  tps_warper.h
app/src/main/res/animator/: button_3d_lift.xml  card_3d_lift.xml
app/src/main/res/color/: register_button_tint.xml  register_input_stroke.xml  text_input_stroke.xml
app/src/main/res/drawable/: bg_answer_status_correct.xml  bg_answer_status_neutral.xml  bg_answer_status_wrong.xml  bg_answer_value.xml  bg_avatar.xml  bg_badge_neutral.xml  bg_badge_offline.xml  bg_badge_online.xml  bg_badge_processing.xml  bg_badge_ready.xml  bg_badge_review.xml  bg_badge_upcoming.xml  bg_button_primary.xml  (+54 more)
app/src/main/res/drawable-night/: bg_lock_timer_panel.xml  bg_lock_warning_panel.xml  bg_notification_skeleton.xml
docs/: omr-core-documentation.md  student_app_reuse_and_architecture.md  teacher-design-system.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+608 files in other folders)
